# MAPMT_calibration

./: .gitignore  README.md
ana/: CMakeLists.txt  README.md
ana/docs/: binary_conversion.md  configuration_files.md  legacy_CLAS12_RICH_notes.md  time_calibration.md
ana/include/mapmt/: DetectorConfig.hpp  HardwareMap.hpp  ScalerPedestalAnalyzer.hpp  TimeCalibration.hpp
ana/src/: DetectorConfig.cpp  HardwareMap.cpp  ScalerPedestalAnalyzer.cpp  TimeCalibration.cpp  main.cpp  mapmt_bin2root.cpp
ana/testdata/legacy_two_modules/: README.md  fiber.map  gain.txt
ana/testdata/time_small/: event_address_tdc.csv
cnf/: README.md  detector.conf
cnf/maps/: README.md  default_mapset.txt  setup.txt  threshold.txt
cnf/maps/RICH1/: fiber.map  setup.txt  threshold.txt
cnf/maps/RICH2/: chip.txt  fiber.map  fiberNew.map  gain.txt  setup.txt  setupOld.txt  threshold_25.txt
cnf/maps/dRICH_prototype/: PmtPedestal.txt  gain.txt  newGain.txt  old_gain.txt  setup.txt  threshold.txt  threshold_15.txt
daq/: README.md  configure_all.sh  daq.env.example  daq_common.sh  rate_scan.sh  rich_dark.sh  rich_pedestal.sh  rich_tdc.sh  setup_daq.csh.example  test_configuration.sh  thr_scan.sh
data/ped/: rich_pedestal_20260514_043847.txt  rich_pedestal_20260514_044219.txt  rich_setup_20260514_044219.txt
